# pvr-ottclub

./: .gitmodules  CMakeLists.txt  CurlHttpRequestBuilder.cpp  CurlHttpRequestBuilder.h  HttpRequestBuilder.h  OTTClient.cpp  OTTClient.h  README.md  XBMCHttpRequestBuilder.cpp  XBMCHttpRequestBuilder.h  addon.cpp  addon.h  addon.xml  otttest.cpp
resources/: settings.xml
resources/language/resource.language.en_gb/: strings.po
